Fixed typo in git uri in Dockerfile

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -11,13 +11,35 @@ server {
     # the port your site will be served on, default_server indicates that this server block
     # is the block to use if no blocks match the server_name
     listen      80 default_server;
-
+    root /home/docker/code;
+    index index.html;
     # the domain name it will serve for
-    server_name .example.com; # substitute your machine's IP address or FQDN
+    server_name localhost; # substitute your machine's IP address or FQDN
     charset     utf-8;
 
+    # Enable compression
+    gzip on;
+    gzip_disable "msie6";
+
+    gzip_comp_level 6;
+    gzip_min_length 1100;
+    gzip_buffers 16 8k;
+    gzip_proxied any;
+    gzip_types
+    text/plain
+    text/css
+    text/js
+    text/xml
+    text/javascript
+    application/javascript
+    application/x-javascript
+    application/json
+    application/xml
+    application/rss+xml
+    image/svg+xml;
+
     # max upload size
-    client_max_body_size 75M;   # adjust to taste
+# client_max_body_size 75M;   # adjust to taste
 
     # Django media
     location /media  {
@@ -29,13 +51,12 @@ server {
     #  }
 
     # Finally, send all non-media requests to the Django server.
-    location ~ ^/(admin|api)/ {
+    location ~ ^/(admin|api|static) {
         uwsgi_pass  django;
         include     /home/docker/code/uwsgi_params; # the uwsgi_params file you installed
     }
 
     location / {
-        root /home/docker/code;
-        index index.html;
+        try_files $uri $uri/ /index.html /;
     }
 }
