--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -11,7 +11,7 @@ server {
     # the port your site will be served on, default_server indicates that this server block
     # is the block to use if no blocks match the server_name
     listen      80 default_server;
-    root /home/docker/code;
+    root /home/docker/code/frontend/src;
     index index.html;
     # the domain name it will serve for
     server_name localhost; # substitute your machine's IP address or FQDN
@@ -46,9 +46,10 @@ server {
         alias /home/docker/persistent/media;  # your Django project's media files - amend as required
     }
 
-    # location /static {
-    #       alias /home/docker/volatile/static; # your Django project's static files - amend as required
-    #  }
+    location /node_modules/  {
+        alias /home/docker/code/frontend/node_modules/$1;  
+    }
+
 
     # Finally, send all non-media requests to the Django server.
     location ~ ^/(admin|api|static) {
