Added setup script

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -50,9 +50,13 @@ server {
         alias /home/docker/code/frontend/node_modules/$1;  
     }
 
+    location /static/  {
+        alias /home/docker/code/app/static/$1;  
+    }
+
 
     # Finally, send all non-media requests to the Django server.
-    location ~ ^/(admin|api|static) {
+    location ~ ^/(admin|api) {
         uwsgi_pass  django;
         include     /home/docker/code/uwsgi_params; # the uwsgi_params file you installed
     }
