--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -14,8 +14,13 @@ server {
     root /home/docker/code/frontend/src;
     index index.html;
     # the domain name it will serve for
-    server_name localhost; # substitute your machine's IP address or FQDN
     charset     utf-8;
+
+    listen 443 ssl;
+
+    server_name nicholas.works;
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
     # Enable compression
     gzip on;
