Fixed some frontend configs

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -46,6 +46,9 @@ server {
     # max upload size
 # client_max_body_size 75M;   # adjust to taste
 
+
+    sendfile off;
+
     # Django media
     location /media  {
         alias /home/docker/persistent/media;  # your Django project's media files - amend as required
@@ -67,6 +70,7 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html /;
+        expires 1s;
+        try_files $uri $uri/ /index.html;
     }
 }
