--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,22 @@
-# nginx-app.conf
+# nginx.conf
+
+
+server {
+    listen 80;
+    server_name www.nicholas.works nicholas.works;
+
+    # redirects both www and non-www to https
+    return 301 https://nicholas.works$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name www.nicholas.works;
+
+    # redirects www to non-www. wasn't work for me without this server block
+    return 301 $scheme://nicholas.works$request_uri;
+}
+
 
 # the upstream component nginx needs to connect to
 upstream django {
@@ -10,13 +28,13 @@ upstream django {
 server {
     # the port your site will be served on, default_server indicates that this server block
     # is the block to use if no blocks match the server_name
-    listen      80 default_server;
+	listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2 default_server;
+
     root /home/docker/code/frontend/src;
     index index.html;
     # the domain name it will serve for
     charset     utf-8;
-
-    listen 443 ssl;
 
     server_name nicholas.works;
     ssl_certificate /etc/nginx/ssl/nginx.crt;
@@ -73,4 +91,5 @@ server {
         expires 1s;
         try_files $uri $uri/ /index.html;
     }
+
 }
